fixed scrollbar colors on hover (chrome)

--- a/src/views/stats/styles/scrollbar.scss
+++ b/src/views/stats/styles/scrollbar.scss
@@ -10,7 +10,7 @@
     background: rgba(var(--color), 0.35);
 
     &:hover {
-        background: var(--color);
+        background: rgb(var(--color));
     }
 }
 
